# ClangModuleWarnings

./: CMakeLists.txt  README.md  main.cpp
mylib/: mylib.cpp
mylib/include/: module.modulemap
mylib/include/mylib/: mylib.h
